Feature: nuevo endpoint para validar token y validar usuario que exista
